--- a/core/main-service/main-server/src/main/resources/application.yaml
+++ b/core/main-service/main-server/src/main/resources/application.yaml
@@ -4,40 +4,17 @@ server:
 spring:
   application:
     name: main-service
-  sql:
-    init:
-      mode: always
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        jdbc:
-          time_zone: Europe/Moscow
-        show_sql: true
-        type:
-          descriptor:
-            sql:
-              BasicBinder: TRACE
-  mvc:
-    format:
-      date-time: yyyy-MM-dd HH:mm:ss
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:6542/mainservice
-    username: mainservice
-    password: mainservice
-
-logging:
-  level:
-    org.springframework.orm.jpa: INFO
-    org.springframework.transaction: INFO
-    org.springframework.transaction.interceptor: TRACE
-    org.springframework.orm.jpa.JpaTransactionManager: DEBUG
-    org.zalando.logbook: TRACE
-    ru.practicum: TRACE
+  config:
+    import: "configserver:"
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        serviceId: config-server
+      fail-fast: true
+      retry:
+        use-random-policy: true
+        max-interval: 6000
 
 eureka:
   client:
