--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,9 @@
 	<properties>
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+		<spring-retry-dependencies.version>2.0.12</spring-retry-dependencies.version>
 		<spring-cloud-dependencies.version>2023.0.3</spring-cloud-dependencies.version>
+		<org.postgresql-dependencies.version>42.7.3</org.postgresql-dependencies.version>
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 
 	</properties>
@@ -60,6 +61,19 @@
 				<version>${spring-cloud-dependencies.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.retry</groupId>
+				<artifactId>spring-retry</artifactId>
+				<version>${spring-retry-dependencies.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${org.postgresql-dependencies.version}</version>
+				<scope>runtime</scope>
 			</dependency>
 
 		</dependencies>
