--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -5,8 +5,8 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: main_server_route
-          uri: lb://main-server
+        - id: main_service_route
+          uri: lb://main-service
           predicates:
             - Path=/**
 
