feat: Вынести сервис Users в отдельное приложение

--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -5,11 +5,14 @@ spring:
         locator:
           enabled: true
       routes:
+        - id: users_service
+          uri: lb://users
+          predicates:
+            - Path=/internal/users/**,/admin/users/**
         - id: main_service_route
           uri: lb://main-service
           predicates:
             - Path=/**
-
 
 server:
   port: 8080
