--- a/core/main-service/pom.xml
+++ b/core/main-service/pom.xml
@@ -97,11 +97,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>ru.practicum</groupId>
-            <artifactId>users</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--TODO: убрать лишние зависимости -->
 
         <dependency>
             <groupId>ru.practicum</groupId>
