--- a/core/requests/pom.xml
+++ b/core/requests/pom.xml
@@ -17,27 +17,26 @@
             <artifactId>interaction-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -47,16 +46,9 @@
         <!-- TODO: убрать зависимость -->
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>users</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!-- TODO: убрать зависимость -->
-        <dependency>
-            <groupId>ru.practicum</groupId>
             <artifactId>events</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
 
     <build>
