--- a/core/comments/src/main/resources/application.yaml
+++ b/core/comments/src/main/resources/application.yaml
@@ -1,9 +1,6 @@
-server:
-  port: 0
-
 spring:
   application:
-    name: main-service
+    name: comments
   config:
     import: "configserver:"
   cloud:
@@ -15,6 +12,9 @@ spring:
       retry:
         use-random-policy: true
         max-interval: 6000
+
+server:
+  port: 0
 
 eureka:
   client:
