feat: Поправить название сервиса users на user-service

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,7 +15,7 @@
 
     <modules>
         <module>interaction-api</module>
-        <module>users</module>
+        <module>user-service</module>
         <module>requests</module>
         <module>comments</module>
         <module>events</module>
