--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -14,7 +14,7 @@ spring:
           predicates:
           - Path=/users/*/events/*/requests/**,/users/*/requests/**
         - id: users_service_route
-          uri: lb://users
+          uri: lb://user-service
           predicates:
             - Path=/internal/users/**,/admin/users/**
         - id: events_core_route
