feat: Поправить название сервиса comments на comment-service

--- a/core/comment-service/pom.xml
+++ b/core/comment-service/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>comments</artifactId>
+    <artifactId>comment-service</artifactId>
 
     <dependencies>
         <dependency>
