--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,7 +17,7 @@
         <module>interaction-api</module>
         <module>user-service</module>
         <module>request-service</module>
-        <module>comments</module>
+        <module>comment-service</module>
         <module>event-service</module>
     </modules>
 
