--- a/infra/config-server/src/main/resources/config/core/event-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/core/event-service/application.yaml
@@ -18,3 +18,13 @@ spring:
     url: jdbc:postgresql://localhost:6542/mainservice
     username: mainservice
     password: mainservice
+
+resilience4j.circuitbreaker:
+  instances:
+    UserClient:
+      slidingWindowSize: 50
+      minimumNumberOfCalls: 5
+      failureRateThreshold: 50
+      waitDurationInOpenState: 10000
+      automaticTransitionFromOpenToHalfOpenEnabled: true
+      permittedNumberOfCallsInHalfOpenState: 3
